--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header__container">
+            <div class="header__col1">
+                <a href="#" class="logo__link"><img src="#" alt="logo" class="header__logo"></a>
+                <nav class="header__menu">
+                    <ul class="menu__list">
+                        <li class="menu__item">
+                            <a href="#" class="menu__link"></a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="header__col2">
+                <button class="header__button-login"></button>
+                <button class="header__button-signup"></button>
+            </div>
+        </div>
+    </header>
+    <main class="main">
+        <div class="main__container"></div>
+    </main>
+    <footer class="footer">
+        <div class="foer__container"></div>
+    </footer>
 </body>
 </html>
