finished filled and stylized first block of main

--- a/index.html
+++ b/index.html
@@ -42,7 +42,21 @@
         </div>
     </header>
     <main class="main">
-        <div class="main__container"></div>
+        <div class="main__container">
+            <div class="main__col1 main_col1">
+                <div class="main_col1__title">Investing for Everyone</div>
+                <div class="main_col1__subtitle">Commission-free investing, plus the tools you need to put your money in motion. Sign up and get your first stock for free. Certain limitations apply.</div>
+                <div class="main_col1__button">Sign Up</div>
+                <div class="main_col1__end main_col1_end">
+                    <img src="img/i.svg" alt="circle with i" class="main_col1_end__col1">
+                    <div class="main_col1_end__col2">Commissions & Free Stock Disclosures</div>
+                </div>
+            </div>
+            <div class="main__col2 main_col2">
+                <img src="img/right_col_of_main.png" alt="phone" style="display: block;width: 692px;
+                height: 600px;" class="main_col2__background">
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <div class="foer__container"></div>
