finished second block of main

--- a/index.html
+++ b/index.html
@@ -11,57 +11,64 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="header">
-        <div class="header__container">
-            <div class="header__col1">
-                <a href="#" class="logo__link"><img src="img/logo.svg" alt="logo" class="header__logo"></a>
-                <nav class="header__menu">
-                    <ul class="menu__list">
-                        <li class="menu__item">
-                            <div class="menu__link">Products</div>
-                            <img src="img/arrow.svg" alt="" class="link__arrow">
-                        </li>
-                        <li class="menu__item">
-                            <div class="menu__link">Learn</div>
-                            <img src="img/arrow.svg" alt="" class="link__arrow">
-                        </li>
-                        <li class="menu__item">
-                            <div class="menu__link">Support</div>
-                        </li>
-                        <li class="menu__item">
-                            <div class="menu__link">Who we are</div>
-                            <img src="img/arrow.svg" alt="" class="link__arrow">
-                        </li>
-                    </ul>
-                </nav>
+    <div class="wrapper">
+        <header class="header">
+            <div class="header__container">
+                <div class="header__col1">
+                    <a href="#" class="logo__link"><img src="img/logo.svg" alt="logo" class="header__logo"></a>
+                    <nav class="header__menu">
+                        <ul class="menu__list">
+                            <li class="menu__item">
+                                <div class="menu__link">Products</div>
+                                <img src="img/arrow.svg" alt="" class="link__arrow">
+                            </li>
+                            <li class="menu__item">
+                                <div class="menu__link">Learn</div>
+                                <img src="img/arrow.svg" alt="" class="link__arrow">
+                            </li>
+                            <li class="menu__item">
+                                <div class="menu__link">Support</div>
+                            </li>
+                            <li class="menu__item">
+                                <div class="menu__link">Who we are</div>
+                                <img src="img/arrow.svg" alt="" class="link__arrow">
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="header__col2">
+                    <button class="header__button-login">Log In</button>
+                    <button class="header__button-signup">Sign Up</button>
+                </div>
             </div>
-            <div class="header__col2">
-                <button class="header__button-login">Log In</button>
-                <button class="header__button-signup">Sign Up</button>
-            </div>
-        </div>
-    </header>
-    <main class="main">
-        <div class="main__container">
-            <div class="main__first-block">
-                <div class="main__col1 main_col1">
-                    <div class="main_col1__title">Investing for Everyone</div>
-                    <div class="main_col1__subtitle">Commission-free investing, plus the tools you need to put your money in motion. Sign up and get your first stock for free. Certain limitations apply.</div>
-                    <div class="main_col1__button">Sign Up</div>
-                    <div class="main_col1__end main_col1_end">
-                        <img src="img/i.svg" alt="circle with i" class="main_col1_end__col1">
-                        <div class="main_col1_end__col2">Commissions & Free Stock Disclosures</div>
+        </header>
+        <main class="main">
+            <div class="main__container">
+                <div class="main__first-block">
+                    <div class="main__col1 main_col1">
+                        <div class="main_col1__title">Investing for Everyone</div>
+                        <div class="main_col1__subtitle">Commission-free investing, plus the tools you need to put your money in motion. Sign up and get your first stock for free. Certain limitations apply.</div>
+                        <div class="main_col1__button">Sign Up</div>
+                        <div class="main_col1__end main_col1_end">
+                            <img src="img/i.svg" alt="circle with i" class="main_col1_end__col1">
+                            <div class="main_col1_end__col2">Commissions & Free Stock Disclosures</div>
+                        </div>
+                    </div>
+                    <div class="main__col2 main_col2">
+                        <img src="img/right_col_of_main-removebg.png" alt="phone" style="display: block;width: 692px;
+                        height: 600px;" class="main_col2__background">
                     </div>
                 </div>
-                <div class="main__col2 main_col2">
-                    <img src="img/right_col_of_main-removebg.png" alt="phone" style="display: block;width: 692px;
-                    height: 600px;" class="main_col2__background">
+                <span class="horisontal-line"></span>
+                <div class="main__second-block">
+                    <div>See our <div class="bold"><b>fee schedule</b></div> to learn more about cost.</div>
                 </div>
+                <span class="horisontal-line"></span>
             </div>
-        </div>
-    </main>
-    <footer class="footer">
-        <div class="foer__container"></div>
-    </footer>
+        </main>
+        <footer class="footer">
+            <div class="foer__container"></div>
+        </footer>
+    </div>
 </body>
 </html>
