finished  third block of main

--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
                     <div>See our <div class="bold"><b>fee schedule</b></div> to learn more about cost.</div>
                 </div>
                 <span class="horisontal-line"></span>
+                <div class="main__third-block">
+                    <img src="img/superbowl 1.png" alt="cafe" class="third-block__col1"></img>
+                    <div class="third-block__col2">
+                        <div class="third-block-col2__title">We are all investors.</div>
+                        <div class="third-block-col2__subtitle">See the campaign <img src="img/arrow1.svg" alt="arrow"></div>
+                    </div>
+                </div>
+                <span class="horisontal-line"></span>
             </div>
         </main>
         <footer class="footer">
