dont completed six block

--- a/index.html
+++ b/index.html
@@ -72,6 +72,49 @@
                     </div>
                 </div>
                 <span class="horisontal-line"></span>
+                <div class="main__fifth-block">
+                    <div class="col__cover">
+                        <div class="fifth-block__title">Introducing Fractional Shares</div>
+                        <div class="fifth-block__subtitle">Invest in thousands of stocks with as little as $1.</div>
+                        <div class="fifth-block__cols">
+                            <div class="col__info">
+                                <div class="col__title">Invest Any Amount</div>
+                                <p class="col__description">Choose how much you want to invest, and we’ll convert from dollars to parts of a whole share.</p>
+                            </div>
+                            <div class="col__info">
+                                <div class="col__title">Build a Balanced Portfolio</div>
+                                <p class="col__description">Customize your portfolio with pieces of different companies and funds to help reduce risk.</p>
+                            </div>
+                            <div class="col__info">
+                                <div class="col__title">Trade in Real Time</div>
+                                <p class="col__description">Trades placed during market hours are executed at that time, so you’ll always know the share price.</p>
+                            </div>
+                        </div>
+                        <div class="fifth-block__info"><img src="img/i.png" style="display:inline-block;width: 28px;
+                            height: 28px;" alt="i"> Fractional Shares Disclosure</div>
+                    </div>
+                        <img src="img/colors.png" alt="colors" class="fifth-block__colors">
+                </div>
+                <span class="horisontal-line"></span>
+                <div class="main__six-block">
+                    <div class="six-block__col1">
+                        <div class="six-block-col1__title">Our Products</div>
+                        <div class="six-block-col1__variety">
+                            <div class="variety">Cash Management</div>
+                            <div class="variety">Stocks & Funds</div>
+                            <div class="variety">Options</div>
+                            <div class="variety">Gold <div class="vertical__line"></div><div class="crypto">Crypto</div></div>
+                        </div>
+                        <div class="six-block-col1__description">Earn 0.30% APY* on your uninvested cash and get more flexibility with your brokerage account.</div>
+                        <button class="six-block-col1_button">Learn More</button>
+                        <div class="six-block__info"><img src="img/i1.png" style="display:inline-block;width: 28px;
+                        height: 28px;margin-right: 13px;" alt="i">Variable APY and Debit Card Disclosures</div>
+                    </div>
+                    <div class="six-block__col2">
+                        <img src="img/right_col_of_main-removebg1.png" alt="phone" class="six-block-col2__img">
+                        <div class="six-block-col2__description">Cash Management offered through Robinhood Financial</div>
+                    </div>
+                </div>
             </div>
         </main>
         <footer class="footer">
