--- a/index.html
+++ b/index.html
@@ -111,14 +111,53 @@
                         height: 28px;margin-right: 13px;" alt="i">Variable APY and Debit Card Disclosures</div>
                     </div>
                     <div class="six-block__col2">
-                        <img src="img/right_col_of_main-removebg1.png" alt="phone" class="six-block-col2__img">
+                        <img src="img/right_col_of_main-removebg1.png" 
+                        alt="phone" class="six-block-col2__img">
                         <div class="six-block-col2__description">Cash Management offered through Robinhood Financial</div>
                     </div>
                 </div>
             </div>
         </main>
         <footer class="footer">
-            <div class="foer__container"></div>
+            <div class="footer__container">
+                <div class="footer__cover">
+                    <div class="footer__cols">
+                        <div class="footer-col1">
+                            <div class="footer-col1__col">
+                                <div>Stocks & Funds</div>
+                                <div>Options</div>
+                                <div>Gold</div>
+                                <div>Cash Management</div>
+                                <div>Crypto</div>
+                            </div>
+                            <div class="hrr"></div>
+                            <div class="footer-col1__col">
+                                <div>Learn</div>
+                                <div>Support</div>
+                                <div>Snacks</div>
+                            </div>
+                            <div class="hrr"></div>
+                            <div class="footer-col1__col">
+                                <div>About us</div>
+                                <div>Careers</div>
+                                <div>Affiliates</div>
+                                <div>Blog</div>
+                            </div>
+                        </div>
+                        <div class="footer-col2">
+                            <img src="img/snaks.svg" alt="Snacks" class="footer-col2__icon">
+                            <p class="footer-col2__description">The 3-minute newsletter with fresh takes on the financial news you need to start your day.</p>
+                            <div class="footer-col2__input-block">
+                                <input type="text" class="footer__input" placeholder="name@gmail.com"><button class="input__button">Subscribe</button>
+                            </div>
+                            <div class="footer-col2__summary"><div>Check the background of the firm on FINRA’s BrokerCheck</div> <div> Brokerage Customer Relationship Summary</div>  <div>Robinhood Terms & Conditions</div>  <div>Disclosure Library</div> <div>Privacy</div></div>
+                        </div>
+                    </div>
+                    <span class="horisontal-line"></span>
+                    <div class="footer__rights">© 2021Robinhood. All rights reserved. <br> <br>Robinhood means Robinhood Markets and its in-application and web experiences with its family of wholly owned subsidiaries which includes Robinhood Financial, Robinhood Securities, and Robinhood Crypto. <br> <br>All investments involve risks, including the possible loss of capital. <br><br> Securities trading is offered to self-directed customers by Robinhood Financial. Robinhood Financial is a member of the  <div class="green" class="color: rgb(0, 200, 5);">Financial Industry Regulatory Authority (FINRA).</div>
+                    </div>
+                    <div class="footer__end"><img src="img/i2.png" alt="i">View Important Disclosures</div>
+                </div>
         </footer>
     </div>
 </body>
